--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-SQL_DIALECT=postgres
-SQL_LOGGING=true
-DATABASE_HOST=localhost
-DATABASE_USER=postgres
-DATABASE_NAME=postgres
-DATABASE_PASSWORD=5750@@@@
-DATABASE_PORT=5454
+SQL_DIALECT=
+SQL_LOGGING=
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_NAME=
+DATABASE_PASSWORD=
+DATABASE_PORT=
